# elint

./: README.md  elint.cabal
examples/: Example1.hs  Example2.hs
src/Data/: Intel.hs
src/Data/Intel/: Confidence.hs  Intel.hs  TH.hs
