name:                elint
version:             0.1.0.0
synopsis:            Type-safe modelling of intelligence gathering
description:         Library that models information intelligence in a
                     type-safe way: incomplete intel, certainty levels and
                     probabilities, aging (degrading) of information, intel
                     report comparison, etc.

homepage:            https://github.com/nbrk/elint#readme
license:             BSD3
license-file:        LICENSE
author:              Nikolay Burkov
maintainer:          nbrk@linklevel.net
copyright:           2018 Nikolay Burkov
category:            Data
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md


library
  hs-source-dirs:      src
  exposed-modules:     Data.Intel
  other-modules:       Data.Intel.Confidence
                     , Data.Intel.Intel
                     , Data.Intel.TH
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , lens
                     , template-haskell
